[package]
name = "keystone_xdtl"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false
description = "Motor Rust para prestamos internos entre vaults DTL."
license = "MIT"

[dependencies]
blake3 = "1.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
